--- a/rapidpro/charts/mailroom/templates/mailroom.yaml
+++ b/rapidpro/charts/mailroom/templates/mailroom.yaml
@@ -39,10 +39,10 @@ spec:
         envFrom:
         - configMapRef:
             name: database-host
+        - configMapRef:
+            name: redis-host
         - secretRef: 
             name: {{ .Values.global.databaseCredentialsSecret }}
-        - secretRef:
-            name: redis-connection
         env:
         - name: BACKEND_URL
           value: http://rapidpro-svc:8080
