--- a/rapidpro/charts/rapidpro/templates/migrations.yaml
+++ b/rapidpro/charts/rapidpro/templates/migrations.yaml
@@ -23,10 +23,10 @@ spec:
         envFrom:
         - configMapRef:
             name: database-host
+        - configMapRef:
+            name: redis-host
         - secretRef:
             name: {{ .Values.global.databaseCredentialsSecret }}
-        - secretRef:
-            name: redis-connection
         - secretRef:
             name: admin-credentials
         resources:
