--- a/rapidpro/charts/mailroom/templates/mailroom.yaml
+++ b/rapidpro/charts/mailroom/templates/mailroom.yaml
@@ -42,7 +42,7 @@ spec:
         - configMapRef:
             name: redis-host
         - secretRef: 
-            name: {{ .Values.global.databaseCredentialsSecret }}
+            name: {{ .Values.global.databaseCredentials.name }}
         env:
         - name: BACKEND_URL
           value: http://rapidpro-svc:8080
