--- a/rapidpro/charts/rapidpro/templates/celery.yaml
+++ b/rapidpro/charts/rapidpro/templates/celery.yaml
@@ -43,7 +43,7 @@ spec:
         - configMapRef:
             name: redis-host
         - secretRef:
-            name: {{ .Values.global.databaseCredentialsSecret }}
+            name: {{ .Values.global.databaseCredentials.name }}
         env:
         - name: MAILROOM_URL
           value: http://mailroom-svc:8090
